fix: scrollbar gutter only on one side

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -11,7 +11,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-family: "Nunito Light";
-  scrollbar-gutter: stable both-edges;
+  scrollbar-gutter: stable;
 }
 
 a {
